@@ -2,20 +2,24 @@ Revision history for libev, a high-performance and full-featured event loop.
 
 TODO: revisit 59.x timer in the light of modern powersaving
 TODO: maybe use timerfd to detect time jumps on linux
+TODO: document EV_TSTAMP_T
 	- linuxaio backend resulted in random memory corruption
           when loop is forked.
         - linuxaio backend might have tried to cancel an iocb
           multiple times (was unable to trigger this).
         - linuxaio backend now employs a generation counter to
-          avoid handlign spurious events from cancelled requests.
+          avoid handling spurious events from cancelled requests.
 	- io_cancel can return EINTR, deal with it. also, assume
           io_submit also returns EINTR.
         - fix some other minor bugs in linuxaio backend.
+        - ev_tstamp type can now be overriden by defining EV_TSTAMP_T.
         - cleanup: replace expect_true/false and noinline by their
           libecb counterparts.
         - move syscall infrastructure from ev_linuxaio.c to ev.c.
         - prepare io_uring integration.
         - tweak ev_floor.
+        - epoll, poll, win32 Sleep and other places that use millisecond
+          reslution now all try to round up times.
 
 4.27 Thu Jun 27 22:43:44 CEST 2019
 	- linux aio backend almost completely rewritten to work around its
